--- a/notebooks/convert.ipynb
+++ b/notebooks/convert.ipynb
@@ -5,7 +5,10 @@
    "execution_count": 2,
    "id": "de70d8a0-3682-4eeb-87c7-3fc50545d159",
    "metadata": {
-    "tags": []
+    "tags": [],
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [],
    "source": [
@@ -30,7 +33,10 @@
    "execution_count": 3,
    "id": "9eff253c-7b26-4328-9f6b-0334ccf661e0",
    "metadata": {
-    "tags": []
+    "tags": [],
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [],
    "source": [
@@ -52,7 +58,10 @@
    "execution_count": 4,
    "id": "00d05381-fa0e-4337-9122-916ef79f236c",
    "metadata": {
-    "tags": []
+    "tags": [],
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [],
    "source": [
@@ -67,7 +76,10 @@
    "execution_count": 5,
    "id": "ad93bd3d-72c3-46ea-8775-956e99907c82",
    "metadata": {
-    "tags": []
+    "tags": [],
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [
     {
@@ -107,7 +119,10 @@
    "execution_count": 6,
    "id": "7d2c7105-f261-4f64-bc42-b7085a0b988f",
    "metadata": {
-    "tags": []
+    "tags": [],
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [],
    "source": [
@@ -140,7 +155,10 @@
    "execution_count": 7,
    "id": "00e4388b-cbb8-401b-adb4-5d156157a018",
    "metadata": {
-    "tags": []
+    "tags": [],
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [],
    "source": [
@@ -158,7 +176,10 @@
    "execution_count": 8,
    "id": "cfc492da-e35f-42ff-9a90-12df465a1af2",
    "metadata": {
-    "tags": []
+    "tags": [],
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [],
    "source": [
@@ -195,7 +216,10 @@
    "execution_count": null,
    "id": "f5047fe4-d5cc-4fe3-9fb9-606af9d52b7c",
    "metadata": {
-    "tags": []
+    "tags": [],
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [],
    "source": []
@@ -205,7 +229,10 @@
    "execution_count": null,
    "id": "0225f23a-8e2f-4e6c-a8de-f84cd8341016",
    "metadata": {
-    "tags": []
+    "tags": [],
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [],
    "source": []
@@ -215,7 +242,10 @@
    "execution_count": 9,
    "id": "1b32fc4d-ae18-4c63-bb09-f6666a0b3f9d",
    "metadata": {
-    "tags": []
+    "tags": [],
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [
     {
@@ -240,7 +270,10 @@
    "execution_count": 10,
    "id": "baccd2b3-2240-493f-b938-d820c88f90e2",
    "metadata": {
-    "tags": []
+    "tags": [],
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [
     {
@@ -276,7 +309,10 @@
    "execution_count": 11,
    "id": "26e2a278-3b27-44e0-a9e3-1cc470cdb730",
    "metadata": {
-    "tags": []
+    "tags": [],
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [
     {
@@ -284,10 +320,10 @@
      "evalue": "name 'occs_features' is not defined",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[11], line 4\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mnumpy\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mnp\u001b[39;00m\n\u001b[1;32m      3\u001b[0m avg_max_dominance \u001b[38;5;241m=\u001b[39m {}\n\u001b[0;32m----> 4\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m k,v \u001b[38;5;129;01min\u001b[39;00m \u001b[43moccs_features\u001b[49m\u001b[38;5;241m.\u001b[39mitems():\n\u001b[1;32m      5\u001b[0m     values \u001b[38;5;241m=\u001b[39m []\n\u001b[1;32m      6\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m feats \u001b[38;5;129;01min\u001b[39;00m v:\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'occs_features' is not defined"
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[11], line 4\u001B[0m\n\u001B[1;32m      1\u001B[0m \u001B[38;5;28;01mimport\u001B[39;00m \u001B[38;5;21;01mnumpy\u001B[39;00m \u001B[38;5;28;01mas\u001B[39;00m \u001B[38;5;21;01mnp\u001B[39;00m\n\u001B[1;32m      3\u001B[0m avg_max_dominance \u001B[38;5;241m=\u001B[39m {}\n\u001B[0;32m----> 4\u001B[0m \u001B[38;5;28;01mfor\u001B[39;00m k,v \u001B[38;5;129;01min\u001B[39;00m \u001B[43moccs_features\u001B[49m\u001B[38;5;241m.\u001B[39mitems():\n\u001B[1;32m      5\u001B[0m     values \u001B[38;5;241m=\u001B[39m []\n\u001B[1;32m      6\u001B[0m     \u001B[38;5;28;01mfor\u001B[39;00m feats \u001B[38;5;129;01min\u001B[39;00m v:\n",
+      "\u001B[0;31mNameError\u001B[0m: name 'occs_features' is not defined"
      ]
     }
    ],
@@ -307,7 +343,10 @@
    "execution_count": null,
    "id": "62212828-c601-41e6-bf0a-06d1f432f512",
    "metadata": {
-    "tags": []
+    "tags": [],
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [],
    "source": [
@@ -321,7 +360,10 @@
    "execution_count": 12,
    "id": "6f46eba9-6dbf-452f-b2b1-ef93dc49caad",
    "metadata": {
-    "tags": []
+    "tags": [],
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [],
    "source": [
@@ -371,7 +413,10 @@
    "execution_count": 13,
    "id": "896fe05f-886d-48a0-a0ff-5ee4f084ddd6",
    "metadata": {
-    "tags": []
+    "tags": [],
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [],
    "source": [
@@ -388,7 +433,10 @@
    "execution_count": 14,
    "id": "11fe5da1-c6e7-4b2a-a814-a1f31d3c19d5",
    "metadata": {
-    "tags": []
+    "tags": [],
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [
     {
@@ -413,7 +461,10 @@
    "execution_count": 15,
    "id": "af27688a-37e3-45e1-ad15-360d6713caeb",
    "metadata": {
-    "tags": []
+    "tags": [],
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [],
    "source": [
@@ -427,7 +478,10 @@
    "execution_count": 16,
    "id": "f49887f8-5699-4c6c-a0f1-f941f55c0858",
    "metadata": {
-    "tags": []
+    "tags": [],
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [
     {
@@ -460,7 +514,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "ef7b6b2e-6ba7-4a47-9300-ad227744d561",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": []
   },
@@ -469,7 +527,10 @@
    "execution_count": 55,
    "id": "0f39e0ad-00fc-49bb-aebb-e8ec344b3399",
    "metadata": {
-    "tags": []
+    "tags": [],
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [],
    "source": [
@@ -501,7 +562,10 @@
    "execution_count": 56,
    "id": "d1ab393f-1151-4a74-9964-e1a8c94eb4a6",
    "metadata": {
-    "tags": []
+    "tags": [],
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [
     {
@@ -509,10 +573,10 @@
      "evalue": "name 'perfect_matches' is not defined",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[56], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m ind \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m14\u001b[39m\n\u001b[0;32m----> 3\u001b[0m \u001b[38;5;28mprint\u001b[39m(prediced[\u001b[43mperfect_matches\u001b[49m[ind][\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mpart\u001b[39m\u001b[38;5;124m'\u001b[39m]][\u001b[38;5;241m0\u001b[39m])\n\u001b[1;32m      4\u001b[0m plot_truth(perfect_matches[ind]), plot_labels(perfect_matches[ind])\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'perfect_matches' is not defined"
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[56], line 3\u001B[0m\n\u001B[1;32m      1\u001B[0m ind \u001B[38;5;241m=\u001B[39m \u001B[38;5;241m14\u001B[39m\n\u001B[0;32m----> 3\u001B[0m \u001B[38;5;28mprint\u001B[39m(prediced[\u001B[43mperfect_matches\u001B[49m[ind][\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mpart\u001B[39m\u001B[38;5;124m'\u001B[39m]][\u001B[38;5;241m0\u001B[39m])\n\u001B[1;32m      4\u001B[0m plot_truth(perfect_matches[ind]), plot_labels(perfect_matches[ind])\n",
+      "\u001B[0;31mNameError\u001B[0m: name 'perfect_matches' is not defined"
      ]
     }
    ],
@@ -528,7 +592,10 @@
    "execution_count": 31,
    "id": "ced0ed4c-8800-4fa9-a0ae-b3fc8974b3cb",
    "metadata": {
-    "tags": []
+    "tags": [],
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [],
    "source": [
@@ -540,7 +607,10 @@
    "execution_count": 37,
    "id": "322d5aa6-42e0-49ca-9534-7461cd06b11c",
    "metadata": {
-    "tags": []
+    "tags": [],
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [
     {
@@ -548,10 +618,10 @@
      "evalue": "name 'top_truth' is not defined",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[37], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m r \u001b[38;5;241m=\u001b[39m \u001b[43mtop_truth\u001b[49m[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m00350942_583bc49850155f10b9b140fd_step_000_step\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[1;32m      2\u001b[0m plot_truth(r), plot_labels(r)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'top_truth' is not defined"
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[37], line 1\u001B[0m\n\u001B[0;32m----> 1\u001B[0m r \u001B[38;5;241m=\u001B[39m \u001B[43mtop_truth\u001B[49m[\u001B[38;5;124m'\u001B[39m\u001B[38;5;124m00350942_583bc49850155f10b9b140fd_step_000_step\u001B[39m\u001B[38;5;124m'\u001B[39m]\n\u001B[1;32m      2\u001B[0m plot_truth(r), plot_labels(r)\n",
+      "\u001B[0;31mNameError\u001B[0m: name 'top_truth' is not defined"
      ]
     }
    ],
@@ -565,7 +635,10 @@
    "execution_count": null,
    "id": "8db2b0cb-bd79-4961-b15d-50a727fc1b10",
    "metadata": {
-    "tags": []
+    "tags": [],
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [],
    "source": [
@@ -578,7 +651,10 @@
    "execution_count": null,
    "id": "2e66819a-2836-43bf-9dcc-90d8e2da558f",
    "metadata": {
-    "tags": []
+    "tags": [],
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [],
    "source": [
@@ -591,7 +667,10 @@
    "execution_count": null,
    "id": "ccf1f8d9-2079-428e-9eaa-6a5b2036b2d2",
    "metadata": {
-    "tags": []
+    "tags": [],
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [],
    "source": [
@@ -602,7 +681,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "da45d1cf-d167-4730-a311-b6c5eada40de",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": []
   },
@@ -610,7 +693,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "5a7cd2ce-746a-4587-9d35-9b10cc48ad1f",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": []
   },
@@ -619,7 +706,10 @@
    "execution_count": 39,
    "id": "9908c504-f49b-47d9-ab37-76fd09d34f3b",
    "metadata": {
-    "tags": []
+    "tags": [],
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [],
    "source": [
@@ -737,7 +827,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "b1f3a6a9-e2bc-4a2b-b1cb-8aa95e12ae22",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": []
   },
@@ -746,7 +840,10 @@
    "execution_count": null,
    "id": "898ce97c-5a67-44ee-8773-03a41ded34c8",
    "metadata": {
-    "tags": []
+    "tags": [],
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [],
    "source": [
@@ -780,7 +877,10 @@
    "execution_count": 33,
    "id": "b0288eb3-329a-4fdb-a8b1-801b1d155991",
    "metadata": {
-    "tags": []
+    "tags": [],
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [
     {
@@ -1770,7 +1870,10 @@
    "execution_count": 14,
    "id": "9dee34ea-4b9b-4cb5-bd97-88f3dc7b9445",
    "metadata": {
-    "tags": []
+    "tags": [],
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [],
    "source": [
@@ -1789,7 +1892,10 @@
    "execution_count": 16,
    "id": "67199bf5-a7c6-4356-93c0-27c2c17d5b48",
    "metadata": {
-    "tags": []
+    "tags": [],
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [],
    "source": [
@@ -1803,7 +1909,10 @@
    "execution_count": 19,
    "id": "f56a5ea2-5d35-403a-a9e5-3cc3bada09ce",
    "metadata": {
-    "tags": []
+    "tags": [],
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [
     {
@@ -1825,7 +1934,10 @@
    "execution_count": 21,
    "id": "7bc00543-f154-46ba-8943-ed59d1ea449f",
    "metadata": {
-    "tags": []
+    "tags": [],
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [],
    "source": [
@@ -1838,7 +1950,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "e2c7b67a-0f44-41f3-95a7-5654c593470a",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": []
   }
