--- a/uv_net_pipeline/run.ipynb
+++ b/uv_net_pipeline/run.ipynb
@@ -24,30 +24,22 @@
     "%autoreload 2\n",
     "\n",
     "import os\n",
-    "import argparse\n",
-    "import pathlib\n",
-    "import time\n",
     "import torch\n",
     "import torch.optim as optim\n",
     "import torch.nn.functional as F\n",
     "import json\n",
     "import numpy as np\n",
-    "import pandas as pd\n",
     "\n",
-    "from torchmetrics import Metric\n",
     "\n",
     "from datasets.fusiongallery import FusionGalleryDataset\n",
     "from datasets.mfcad import MFCADDataset\n",
     "from datasets.mfcad_extended import MFCADPDataset\n",
-    "from datasets.mfcad_extended_lower_class import MFCADPSDataset\n",
     "from datasets.mftest import MFTestDataset\n",
     "\n",
     "from uvnet.models import UVNetSegmenter\n",
     "\n",
     "from evaluation.jaccard import get_mf_jaccard\n",
-    "from tqdm import tqdm\n",
-    "\n",
-    "from evaluation.map import sample_from_letter, RankingDataset, cals_map_all"
+    "from tqdm import tqdm"
    ]
   },
   {
@@ -84,9 +76,7 @@
     "elif args.dataset == \"fusiongallery\":\n",
     "    Dataset = FusionGalleryDataset\n",
     "elif args.dataset == \"mfcadp\":\n",
-    "    Dataset = MFCADPDataset\n",
-    "elif args.dataset == \"mfcadps\":\n",
-    "    Dataset = MFCADPSDataset"
+    "    Dataset = MFCADPDataset"
    ]
   },
   {
